<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="app_name_text">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="cap_stone">Cap Stone: My Own App</string>
</resources>
