<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alokomkar.myportfolioapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_text_view"
            android:text="@string/app_name_text" />

        <Button
            style="@style/default_button_style"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotifyStreamerButton" />
        <Button
            style="@style/default_button_style"
            android:text="@string/scores_app"
            android:id="@+id/scoresAppButton" />
        <Button
            style="@style/default_button_style"
            android:text="@string/library_app"
            android:id="@+id/libraryAppButton" />
        <Button
            style="@style/default_button_style"
            android:text="@string/build_it_bigger"
            android:id="@+id/buildItBiggerButton" />
        <Button
            style="@style/default_button_style"
            android:text="@string/xyz_reader"
            android:id="@+id/xyzReaderButton" />
        <Button
            style="@style/default_button_style"
            android:text="@string/cap_stone"
            android:id="@+id/capStoneButton" />
    </LinearLayout>



</ScrollView>
